--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,11 +23,10 @@ body{
 .header{
     font-size: 17px;
     background-color: #5b0e2d;
-    height: 40px;
+    height: 60px;
     position: sticky;
     z-index: 100;
     top: 0;
-
 }
 
 .liContainer{
@@ -36,6 +35,7 @@ body{
     width: 100%;
     justify-content:space-around;
     align-items: center;
+    margin-right: 40px;
 }
 
 .liContainer li{
@@ -90,7 +90,21 @@ body{
     transform: scale(1.1);
 }
 
+.checkbtn{
+    font-size: 30px;
+    color:#ffffff;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+}
 /* H1 */
+
 
 h1{
     text-align: center;
@@ -98,6 +112,9 @@ h1{
     font-size: 30px;
 }
 
+.tituloHP{
+    font-weight: bold;
+}
 .cardContainer{
     margin-top: 15px;
 }
@@ -110,15 +127,14 @@ h1{
 }
 
 .textHarry{
-    margin-top: 10px;
+    margin-top: 15px;
     font-weight: bold;
+
 }
 
 .imgPrincipal{
     width: 100%;
     height: 100%;
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
     padding: 0px;
 }
 
@@ -126,7 +142,33 @@ h1{
     transform: scale(1.1);
 }
 
+.cardContainer-2{
+    margin-top: 15px;
+}
 
+.card-2{
+    height: 300px;
+    width: 500px;
+    display:block;
+
+}
+.imgSecundaria{
+    width: 100%;
+    height: 100%;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15;
+    padding: 0px;
+    margin-top: 200px;
+    justify-content: right;
+}
+
+
+.textHarry-2{
+    margin-top: 10px;
+    font-weight: bold;
+    margin-right: 100px;
+    
+}
 
 /* PELICULAS */
 .imgPortadas{
@@ -134,6 +176,7 @@ h1{
     width: 1340px;
     height: 600;
     margin-top: 250px;
+
 }
 
 .imgPortadas img{
@@ -142,7 +185,7 @@ h1{
     object-fit: cover;
     opacity: .8;
     transition: .5s ease;
-    -moz-border-radius: 1px;
+    -moz-border-radius: 10px;
     -webkit-border-radius: 15px;
 }
 
@@ -155,36 +198,56 @@ h1{
     transform: scale(1);
 }
 
-/* FOOTER */
-footer{
-    display: flex;
-    background-color: #000000;
-    justify-content: space-around;
-    align-items: center;
-    height: 50px;
-    margin-top: auto;
-    
+a{
+    text-decoration: none;
 }
 
-footer ul li{
-    list-style: none;
-}
-.redesSocialesContainer{
-    display: flex;
-}
-.redesSocialesContainer li{
-    margin-left: 10px;
 
-}
-.textoFooterContainer{
-    color: white;
-    font-weight: bold;
-
-}
-
-@media screen and (max-width:500px){
-    body{
-        background-color: cornflowerblue;
+@media (max-width:952px){
+    .logoContainer a{
+        padding-left: 20px;
     }
+}
+
+@media (max-width:858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background:#5b0e2d;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    .liContainer{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    .liContainer a{
+        font-size: 20px;
+    }
+    .liContainer li a:hover{
+        background:none;
+        color: rgb(255, 232, 29);
+    }
+    #check:checked ~ ul{
+        left:0;
+    }
+}
+
+.imgJK{
+    width: 100%;
+    height: 100%;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 50;
+    padding: 0px;
     
+    
+}
+footer{
+    margin-top: 150px;
 }
