--- a/css/estilos.css
+++ b/css/estilos.css
@@ -126,8 +126,8 @@ h1{
     margin:auto;
 }
 
-.textHarry{
-    margin-top: 15px;
+.textJK{
+    margin: 20px 50px 50px 50px;
     font-weight: bold;
 
 }
@@ -138,20 +138,13 @@ h1{
     padding: 0px;
 }
 
+
+
 .imgPrincipal:hover{
     transform: scale(1.1);
 }
 
-.cardContainer-2{
-    margin-top: 15px;
-}
 
-.card-2{
-    height: 300px;
-    width: 500px;
-    display:block;
-
-}
 .imgSecundaria{
     width: 100%;
     height: 100%;
@@ -163,11 +156,8 @@ h1{
 }
 
 
-.textHarry-2{
-    margin-top: 10px;
-    font-weight: bold;
-    margin-right: 100px;
-    
+.textHarry{
+    margin-top: 12px;
 }
 
 /* PELICULAS */
@@ -240,14 +230,196 @@ a{
 }
 
 .imgJK{
+    width:400px;
+    height:310px;
+    margin: auto;
+    display: block;
+    border-radius: 200px;
+
+}
+
+.titleJK{
+    text-align: center;
+}
+
+
+.picHP1{
+    width: 515px;
+    height: 330px;
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 50px;
+}
+
+.containerHP{
     width: 100%;
-    height: 100%;
-    -moz-border-radius: 15px;
-    -webkit-border-radius: 50;
-    padding: 0px;
-    
+    max-width: 1000px;
+    margin: auto;
+    padding: 40px;
+}
+
+.hpText{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    margin-top: 40px;
     
 }
+.hpText-2{
+    margin-top: 220px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+
+}
+
+.picHP1-2{
+    width: 515px;
+    height: 330px;
+    float: right;
+    margin: 20px 20px;
+}
+
+.trailer1Container{
+    margin-top: 20px;
+    border-radius: 50px;
+}
+
+/* .trailer1Container::before{
+    content: "";
+    position: absolute;
+    background-image: conic-gradient(red 20deg, transparent 120deg);
+    animation: rotar 2s linear infinite;
+}
+
+@keyframes rotar{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(-360deg);
+    }
+}
+
+.trailer1Container::after{
+    content: "";
+    position: absolute;
+    height: 240px;
+    width: 190px;
+    background-color: #101010;
+} */
+
+h2{
+    margin-top: 80px;
+    text-align: center;
+}
+
+.logoGriffyndor{
+    width: 400px;
+    height: 250px;
+    margin: auto;
+    display: block;
+}
+
+.titleGriffyndor{
+    font-weight: bold;
+    text-align: center;
+}
+
+.titleSlytherin{
+    font-weight: bold;
+    text-align: center;
+}
+.logoSlytherin{
+    width: 227px;
+    height: 266px;
+    margin: auto;
+    display: block;
+}
+.titleHufflepuff{
+    font-weight: bold;
+    text-align: center;
+}
+.logoHufflepuff{
+    width: 217px;
+    height: 238px;
+    margin: auto;
+    display: block;
+}
+.titleRavenclaw{
+    font-weight: bold;
+    text-align: center;
+}
+.logoRavenclaw{
+    width: 455px;
+    height: 256px;
+    margin: auto;
+    display: block;
+}
+
+
+@media (max-width:952px){
+    .logoContainer a{
+        padding-left: 20px;
+    }
+}
+/* 
+@media (max-width:858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background:#5b0e2d;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    .liContainer{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    .liContainer a{
+        font-size: 20px;
+    }
+    .liContainer li a:hover{
+        background:none;
+        color: rgb(255, 232, 29);
+    }
+    #check:checked ~ ul{
+        left:0;
+    }
+} */
+
+@media (max-width:858px){
+    .imgPortadas{
+        width: 100%;
+        height: 100vh;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 footer{
     margin-top: 150px;
 }
